syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license.partners;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/template_version.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license/partners;partners";
option java_package = "PATVS";

service TemplateVersionService {
    rpc Get(GetTemplateVersionRequest) returns (TemplateVersion);
    rpc ListByTemplateID(ListTemplateVersionByTemplateIDRequest) returns (ListTemplateVersionResponse);

    rpc Create (CreateTemplateVersionRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "CreateTemplateVersionMetadata"
            response: "TemplateVersion"
        };
    }

    rpc Update (UpdateTemplateVersionRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "UpdateTemplateVersionMetadata"
            response: "TemplateVersion"
        };
    }
}

message GetTemplateVersionRequest {
    string id = 1 [(required) = true];
}

message ListTemplateVersionByTemplateIDRequest {
    string template_id = 1 [(required) = true];
    int64 page_size = 4;
    string page_token = 5;
}

message CreateTemplateVersionRequest {
    string template_id = 1 [(required) = true];
    string name = 2 [(required) = true];
    Price prices = 3 [(required) = true];
    string period = 4 [(required) = true];
}

message CreateTemplateVersionMetadata {
    string template_version_id = 1;
}

message UpdateTemplateVersionRequest {
    string id = 1 [(required) = true];
    string name = 2 [(required) = true];
    Price prices = 3 [(required) = true];
    string period = 4 [(required) = true];
}

message UpdateTemplateVersionMetadata {
    string template_version_id = 1;
}
